--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "homepage": "https://github.com/Webtrends/interview-app-shell#readme",
   "dependencies": {
+    "angular": "^1.5.8",
+    "angularjs-datepicker": "^2.1.6",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
